# depinspect

./: .flake8  .gitignore  LICENSE  LICENSE_Click  README.md  pyproject.toml  sources.cfg  sources.toml
.github/workflows/: black.yml  ci.yml  mypy.yml  pytest.yml  ruff.yml
depinspect/: __main__.py  cli.py  constants.py  database.py  definitions.py  fetch.py  files.py  helper.py  main.py  printer.py  processor.py  sqlite_db.py  update.py  validator.py
depinspect/archives/: extract.py  extractor.py  fetch.py  fetcher.py
depinspect/database/: database.py
depinspect/distributions/: __init__.py  fedora.py  loader.py  mapping.py  package.py  ubuntu.py
depinspect/fetch/: fetch.py
depinspect/load/: extract.py  fetch.py  file_management.py  files.py  initialize_db.py  read_data.py  sqlite_db.py
depinspect/load/ubuntu/: metadata.py
depinspect/output/: printer.py
depinspect/process/: ubuntu.py
tests/: test_extract.py  test_fetch.py  test_helper.py  test_update.py
tests/archives/: test_extract.py  test_fetch.py
tests/distributions/: test_ubuntu.py
tests/load/: test_extract.py  test_fetch.py
