[tool.poetry]
name = "depinspect"
version = "0.1.0"
description = "A tool to analyze linux package dependencies across multiple distributions and architectures"
license = "MIT"
authors = ["Artem Burashnikov <artem.burashnikov@gmail.com>"]
maintainers = ["Artem Burashnikov <artem.burashnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.0"
ruff = "^0.1.1"

[tool.ruff]
# Assume Python 3.10
target-version = "py310"

[tool.poetry.scripts]
depinspect = "depinspect.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
